--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "flake8>=7.3.0",
+    "pytest>=8.4.2",
+    "pytest-cov>=7.0.0",
+]
